Fix styling by removing unnecessary valigns from tables and increase line-height
git-svn-id: https://wp-table-reloaded.googlecode.com/svn/trunk@536 335f5990-30c3-11de-96ab-f16d9912eac9

--- a/admin/admin-style.dev.css
+++ b/admin/admin-style.dev.css
@@ -115,6 +115,10 @@
     vertical-align:baseline!important;
 }
 
+.postbox .inside p {
+  line-height: 1.2!important;
+}
+
 #table_custom_fields td {
     vertical-align:middle!important;
 }
